# image-anonymizer

./: .env.template  .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/face/: detection.rs  masking.rs
src/ocr/: detection.rs  gemini.rs  masking.rs  mod.rs
tests/: .env.test  detection_tests.rs  face_tests.rs  gemini_tests.rs  integration_tests.rs  masking_tests.rs  mock_tests.rs
tests/fixtures/: sample_response.json
