[package]
name = "image-anonymizer"
version = "0.1.2"
edition = "2024"
authors = ["Katsuhiro Honda <freewave3@gmail.com>"]
description = "A command-line tool to detect and mask sensitive content in images"
license = "MIT"
repository = "https://github.com/e-bebe/image-anonymizer"
readme = "README.md"
keywords = ["image", "text", "masking", "privacy", "ocr"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
image = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking", "multipart"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.21"
dotenv = "0.15.0"
rayon = "1.10.0"
